--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,14 @@
     <load ="partials/header.html" />
 
     <section>
-      <h1>Example page title</h1>
+  
+      <h1>Home work OLENA KARDASH</h1>
+      <button  class='button' >
+         <a href="./1-gallery.html">Go to gallery</a>
+      </button>
+      <button>  
+          <a href="./2-form.html">Go to form</a>
+      </button>
       <!-- Path to images as from index.html file -->
       <img src="./img/javascript.svg" alt="" />
     </section>
