--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+    <section>
+      <a href="./index.html">Go to home</a>
+      <h1>Welcome to gallery</h1>
+    </section>
+     <ul class="gallery"></ul>
     <script src="./js/1-gallery.js" type="module"></script>
 </body>
 </html>
