--- a/src/2-form.html
+++ b/src/2-form.html
@@ -6,6 +6,11 @@
     <title>Document</title>
 </head>
 <body>
+     <section>
+      <a href="./index.html">Go to home</a>
+      <h1>Welcome to form</h1>
+    </section>
+    <div class="form"></div>
     <script src="./js/2-form.js" type="module"></script>
 </body>
 </html>
