--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,8 @@
   </head>
   <body>
     <load ="partials/header.html" />
+    <load ="1-gallery.html" />
+  <load ="2-form.html" />
 
     <section>
   
