--- a/src/index.html
+++ b/src/index.html
@@ -9,16 +9,16 @@
   </head>
   <body>
     <load ="partials/header.html" />
-    <load ="1-gallery.html" />
-  <load ="2-form.html" />
+    <!-- <load ="1-gallery.html" />
+  <load ="2-form.html" /> -->
 
     <section>
   
       <h1>Home work OLENA KARDASH</h1>
-      <button  class='button' >
+      <button  class='button' type="button" >
          <a href="./1-gallery.html">Go to gallery</a>
       </button>
-      <button>  
+      <button class="button" type="button">  
           <a href="./2-form.html">Go to form</a>
       </button>
       <!-- Path to images as from index.html file -->
