--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,12 @@
     <section>
   
       <h1>Home work OLENA KARDASH</h1>
-      <!-- <button  class='button' type="button" >
-         <a href="./1-gallery.html">Go to gallery</a>
-      </button>
-      <button class="button" type="button">  
-          <a href="./2-form.html">Go to form</a>
-      </button> -->
-      <!-- Path to images as from index.html file -->
-      <img src="./img/javascript.svg" alt="" />
+           <ul>
+        <li class="linkList"><a href="./1-gallery.html">Gallery</a></li>
+        <li class="linkList"><a href="./2-form.html">Form</a></li>
+      </ul>
+
+      
     </section>
 
     <!-- Loads the specified .html file -->
