--- a/src/2-form.html
+++ b/src/2-form.html
@@ -12,7 +12,18 @@
       <a href="./index.html">Go to home</a>
       <h1>Welcome to form</h1>
     </section>
-    <div class="form"></div>
+    <div class="div-form"></div>
+       <form class="form js-form" autocomplete="off">
+      <label class="label">
+        Email
+        <input class="input" type="email" name="email" autofocus />
+      </label>
+      <label class="label-textarea">
+        Message
+        <textarea name="message" rows="8"></textarea>
+      </label>
+      <button class="btn" type="submit">Submit</button>
+    </form>
     <script src="./js/2-form.js" type="module"></script>
 </body>
 </html>
